# node-minimal-asset

./: Cargo.toml
.github/workflows/: release.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/asset/: Cargo.toml
pallets/asset/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
