[package]
name = "node-minimal-asset-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk. (polkadot v1.15.0)"
version = "0.1.1"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
frame = { features = [
	"experimental",
	"runtime",
	"runtime-benchmarks",
], workspace = true }
pallet-balances.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-transaction-payment.workspace = true
scale-info = { workspace = true }
sp-genesis-builder.workspace = true
sp-runtime = { features = ["serde"], workspace = true }
pallet-asset.workspace = true

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",

	"frame/std",

	"pallet-balances/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"sp-genesis-builder/std",
	"sp-runtime/std",
	"substrate-wasm-builder",

	"pallet-asset/std",
]
runtime-benchmarks = [
	"frame/runtime-benchmarks",
	"pallet-asset/runtime-benchmarks",
]
